// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MigrationFileBuilder build matches the JavaScript snapshot 1`] = `
"'use strict';

/**
 * Auto-generated by Strapi on 2026.01.01T00.00.00.000.
 *
 * Every step goes through the database rename helpers, which check that the
 * source table/column exists and the target does not before touching anything,
 * so this file is a safe no-op on a fresh database (the tables are created by
 * schema sync afterwards). Skipped steps are logged at startup.
 */
module.exports = {
  async up(knex, db) {
    // api::article.article: rename field "bio" -> "biography"
    await db.schema.renameColumn(knex, { table: 'articles', from: 'bio', to: 'biography' });

    // api::article.article: rename field "tags" -> "labels"
    await db.schema.renameTable(knex, { from: 'articles_tags_lnk', to: 'articles_labels_lnk' });

    // api::article.article: rename field "hero" -> "banner"
    await db.schema.updateRows(knex, {
      table: 'articles_cmps',
      guardColumn: 'field',
      where: { field: 'hero' },
      set: { field: 'banner' },
    });
  },
  async down(knex, db) {
    // Down migrations are not generated for automatically generated migrations.
  },
};
"
`;

exports[`MigrationFileBuilder build matches the TypeScript snapshot 1`] = `
"import type { Knex } from 'knex';
import type { Core } from '@strapi/strapi';

/**
 * Auto-generated by Strapi on 2026.01.01T00.00.00.000.
 *
 * Every step goes through the database rename helpers, which check that the
 * source table/column exists and the target does not before touching anything,
 * so this file is a safe no-op on a fresh database (the tables are created by
 * schema sync afterwards). Skipped steps are logged at startup.
 */
export default {
  async up(knex: Knex, db: Core.Strapi['db']) {
    // api::article.article: rename field "bio" -> "biography"
    await db.schema.renameColumn(knex, { table: 'articles', from: 'bio', to: 'biography' });
  },
  async down(knex: Knex, db: Core.Strapi['db']) {
    // Down migrations are not generated for automatically generated migrations.
  },
};
"
`;
